--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="folio">
                     <a href="http://michaelreedwelsh.github.io/random/"><img src="img/portfolio-4.png" alt="treehouse image"></a>
                     <h3>Random Number Generator</h3>
-                    <p>Little random number generator made using basic Javascript, a Bootstrap button, and some basic HTML and CSS. The button doesn't actually call a function, it refreshes the page.</p>
+                    <p>This is a random number generator made using basic Javascript, a Bootstrap button, and some basic HTML and CSS. The button doesn't actually call a function, it refreshes the page.</p>
                 </div>    
                 <div class="folio">
                     <a href="#"><img src="img/portfolio-5.png" alt="treehouse image"></a>
