Final commit before submission for review. May add more later as my portfolio fleshes out

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav">
             <h1 id="top">Michael R. Welsh</h1>
             <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="#top"><li>Home</li></a>
                 <a href="#folio"><li>Portfolio</li></a>
                 <a href="#contact"><li>Contact</li></a>
                 <a href="#skills"><li>Skills</li></a>
