Fixes for resubmission. Queries fixed. Anchor tag nesting issues fixed. Validated code

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
-        <link href='https://fonts.googleapis.com/css?family=Nunito|Lobster|Droid+Serif' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Nunito%7CLobster%7CDroid+Serif' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <div class="nav">
+        <nav>
             <h1 id="top">Michael R. Welsh</h1>
             <ul>
-                <a href="#top"><li>Home</li></a>
-                <a href="#folio"><li>Portfolio</li></a>
-                <a href="#contact"><li>Contact</li></a>
-                <a href="#skills"><li>Skills</li></a>
+                <li><a href="#top">Home</a></li>
+                <li><a href="#folio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#skills">Skills</a></li>
             </ul>
-            </div>
+        </nav>
             <div class="me">
                 <img class="profile" src="img/prof1.jpg" alt="photograph of Michael Welsh">
-                <p>My name is Michael Welsh. Currently I am studying front end web development through the Treehouse Techdegree program. I am also very active on Freecodecamp and Codecademy for supplemental learning and practice. It is my intention to become proficient in HTML, CSS, and Javascript before the end of this year. I am also teaching myself SQL and Ruby.  </p>
+                <p>My name is Michael Welsh. Currently I am studying front end web development through the Treehouse Techdegree program. I am also very active on Freecodecamp and Codecademy for supplemental learning and practice. It is my intention to become proficient in HTML, CSS, and Javascript before the end of this year. I am also teaching myself SQL and Ruby.</p>
             </div>
             <div class="portfolio" id="folio">
                 <h2>Portfolio</h2>
@@ -78,7 +78,7 @@
             </div>
        
         
-    </body>
+   
     <footer class="clearfix">
        <div class="fleft">
        <h2 id="contact">Contact Info</h2><br>
@@ -94,11 +94,12 @@
         </div>
         <div class="fright">
          <ul class="largefoot">
-                <a href="#top"><li>Home</li></a>
-                <a href="#folio"><li>Portfolio</li></a>
-                <a href="#contact"><li>Contact</li></a>
-                <a href="#skills"><li>Skills</li></a>
+                <li><a href="#top">Home</a></li>
+                <li><a href="#folio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#skills">Skills</a></li>
             </ul>
         </div>
     </footer>
+    </body>
 </html>
