Added a link to the incoplete photo gallery

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     <p>This is a random number generator made using basic Javascript, a Bootstrap button, and some basic HTML and CSS. The button doesn't actually call a function, it refreshes the page.</p>
                 </div>    
                 <div class="folio">
-                    <a href="#"><img src="img/portfolio-5.png" alt="treehouse image"></a>
+                    <a href="http://michaelreedwelsh.github.io/photo_gallery/"><img src="img/portfolio-5.png" alt="treehouse image"></a>
                     <h3>Photo Gallery</h3>
-                    <p>This project doesn't actually exist yet. I will eventually build something like this and replace the dead link. It will probably be filled with pictures of my dog.</p>
+                    <p>This is a project I am putting together for the Treehouse techdegree program. It is not even close to done. I pushed it up to Github early to fill this spot. It uses some fun basic JQuery.</p>
                 </div>
                 
                 <div class="folio">
