--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <ul>
                 <li><a href="#top">Home</a></li>
                 <li><a href="#folio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://www.linkedin.com/in/michaelreedwelsh
+">Contact</a></li>
                 <li><a href="#skills">Skills</a></li>
             </ul>
         </nav>
