added a link to profile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <h1 id="top">Michael R. Welsh</h1>
             <ul>
-                <li><a href="#top">Home</a></li>
+                <li><a href="http://michaelreedwelsh.github.io/">Home</a></li>
                 <li><a href="#folio">Portfolio</a></li>
                 <li><a href="https://www.linkedin.com/in/michaelreedwelsh
 ">Contact</a></li>
