--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </a>
         
         <a href="https://github.com/michaelreedwelsh" target="_blank">
-          <img class="social" src="http://files.softicons.com/download/social-media-icons/flat-gradient-social-icons-by-guilherme-lima/png/512x512/Github.png" alt="github icon">
+          <img class="social" src="http://i.imgur.com/IfBHeiV.png" alt="github icon">
         </a>
         
         <a href="https://twitter.com/EkeltonWelsh" target="blank">
