description of random number

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="folio">
                     <a href="http://michaelreedwelsh.github.io/random/"><img src="img/portfolio-4.png" alt="treehouse image"></a>
                     <h3>Random Number Generator</h3>
-                    <p>This is a random number generator made using basic Javascript, a Bootstrap button, and some basic HTML and CSS. The button doesn't actually call a function, it refreshes the page.</p>
+                    <p>This is a random number generator I built using some basic JavaScript and JQuery. It has a sweet slider to adjust the maximum value.</p>
                 </div>    
                 <div class="folio">
                     <a href="http://michaelreedwelsh.github.io/photo_gallery/"><img src="img/portfolio-5.png" alt="treehouse image"></a>
